testing of the controller finalized and passed